--- a/RealEstate_Dapper_UI/Views/Category/Index.cshtml
+++ b/RealEstate_Dapper_UI/Views/Category/Index.cshtml
@@ -34,7 +34,7 @@
                             }
                         </tbody>
                     </table>
-                    <td><a href="#" class="btn btn-outline-info">Yeni Kategori Girişi</a></td>
+                    <td><a href="CreateCategory" class="btn btn-outline-info">Yeni Kategori Girişi</a></td>
                 </div>
             </div>
         </div>
