--- a/RealEstate_Dapper_UI/Views/Category/UpdateCategory.cshtml
+++ b/RealEstate_Dapper_UI/Views/Category/UpdateCategory.cshtml
@@ -1,7 +1,7 @@
-﻿@model RealEstate_Dapper_UI.Dtos.CategoryDtos.CreateCategoryDto
+﻿@model RealEstate_Dapper_UI.Dtos.CategoryDtos.UpdateCategoryDto
 
 @{
-    ViewData["Title"] = "CreateCategory";
+    ViewData["Title"] = "UpdateCategory";
     Layout = "~/Views/Admin/Index.cshtml";
 }
 
@@ -9,8 +9,9 @@
     <div class="row g-4">
         <div class="col-12">
             <div class="bg-light rounded h-100 p-4">
-                <h6 class="mb-4">Kategori Ekleme Sayfası</h6>
+                <h6 class="mb-4">Kategori Güncelleme Sayfası</h6>
                 <form method="post">
+                    <input type="hidden" asp-for="CategoryID" class="form-control" />
                     <label>Kategori Adı</label>
                     <input type="text" asp-for="CategoryName" class="form-control" />
                     <br />
@@ -20,4 +21,3 @@
         </div>
     </div>
 </div>
-
