--- a/RealEstate_Dapper_UI/Views/Product/CreateProduct.cshtml
+++ b/RealEstate_Dapper_UI/Views/Product/CreateProduct.cshtml
@@ -25,7 +25,7 @@
                     <br />
 
                     <label>Kategori</label>
-                    <input type="text" asp-for="CategoryName" class="form-control" />
+                    @Html.DropDownListFor(x => x.CategoryID,(List<SelectListItem>)ViewBag.v,new {@class="form-control"})
                     <br />
 
                     <label>Fiyat</label>
