--- a/RealEstate_Dapper_UI/Views/Employee/CreateEmployee.cshtml
+++ b/RealEstate_Dapper_UI/Views/Employee/CreateEmployee.cshtml
@@ -1,8 +1,35 @@
-﻿
+﻿@model RealEstate_Dapper_UI.Dtos.EmployeeDtos.CreateEmployeeDto
+
 @{
     ViewData["Title"] = "CreateEmployee";
     Layout = "~/Views/Admin/Index.cshtml";
 }
 
-<h1>CreateEmployee</h1>
+<div class="container-fluid pt-4 px-4">
+    <div class="row g-4">
+        <div class="col-12">
+            <div class="bg-light rounded h-100 p-4">
+                <h6 class="mb-4">Personel Ekleme Sayfası</h6>
+                <form method="post">
+                    <label>Personel Adı</label>
+                    <input type="text" asp-for="Name" class="form-control" />
+                    <br />
+                    <label>Ünvan</label>
+                    <input type="text" asp-for="Title" class="form-control" />
+                    <br />
+                    <label>Email</label>
+                    <input type="email" asp-for="Mail" class="form-control" />
+                    <br />
+                    <label>Telefon Numarası</label>
+                    <input type="tel" asp-for="PhoneNumber" class="form-control" />
+                    <br />
+                    <label>Resim Dosyası</label>
+                    <input type="text" asp-for="ImageUrl" class="form-control" />
+                    <br />                
+                    <button class="btn btn-warning">Personeli Kaydet</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
