--- a/RealEstate_Dapper_UI/Views/Employee/Index.cshtml
+++ b/RealEstate_Dapper_UI/Views/Employee/Index.cshtml
@@ -1,8 +1,52 @@
-﻿
+﻿@model List<RealEstate_Dapper_UI.Dtos.EmployeeDtos.ResultEmployeeDto>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Admin/Index.cshtml";
 }
 
-<h1>Index</h1>
+
+
+<div class="container-fluid pt-4 px-4">
+    <div class="row g-4">
+        <div class="col-12">
+            <div class="bg-light rounded h-100 p-4">
+                <h6 class="mb-4">Personel Listesi</h6>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Personel Adı</th>
+                                <th scope="col">Email Adresi</th>
+                                <th scope="col">Telefon Numarası</th>
+                                <th scope="col">Ünvan</th>
+                                <th scope="col">Sil</th>
+                                <th scope="col">Güncelle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <th scope="row">@item.EmployeeID</th>
+                                    <td>@item.Name</td>
+                                    <td>@item.Mail</td>
+                                    <td>@item.PhoneNumber</td>
+                                    <td>@item.Title</td>
+                                    <td>@item.Status</td>
+                                    <td><a href="/Employee/DeleteEmployee/@item.EmployeeID" class="btn btn-outline-danger">Sil</a></td>
+                                    <td><a href="/Employee/UpdateEmployee/@item.EmployeeID" class="btn btn-outline-success">Güncelle</a></td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    <td><a href="/Employee/CreateEmployee" class="btn btn-outline-info">Yeni Kategori Girişi</a></td>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
