--- a/RealEstate_Dapper_UI/Views/Product/Index.cshtml
+++ b/RealEstate_Dapper_UI/Views/Product/Index.cshtml
@@ -43,7 +43,7 @@
                             }
                         </tbody>
                     </table>
-                    <td><a href="" class="btn btn-outline-info">Yeni İlan Girişi</a></td>
+                    <td><a href="/Product/CreateProduct" class="btn btn-outline-info">Yeni İlan Girişi</a></td>
                 </div>
             </div>
         </div>
