--- a/RealEstate_Dapper_UI/Views/Employee/UpdateEmployee.cshtml
+++ b/RealEstate_Dapper_UI/Views/Employee/UpdateEmployee.cshtml
@@ -1,8 +1,32 @@
-﻿
+﻿@model RealEstate_Dapper_UI.Dtos.EmployeeDtos.UpdateEmployeeDto
+
 @{
     ViewData["Title"] = "UpdateEmployee";
     Layout = "~/Views/Admin/Index.cshtml";
 }
 
-<h1>UpdateEmployee</h1>
+<div class="container-fluid pt-4 px-4">
+    <div class="row g-4">
+        <div class="col-12">
+            <div class="bg-light rounded h-100 p-4">
+                <h6 class="mb-4">Personel Güncelleme Sayfası</h6>
+                <form method="post">
+                    <input type="hidden" asp-for="EmployeeID" class="form-control" />
+                    <label>Kategori Adı</label>
+                    <input type="text" asp-for="Name" class="form-control" />
+                    <br />
+                    <input type="text" asp-for="Title" class="form-control" />
+                    <br />
+                    <input type="email" asp-for="Mail" class="form-control" />
+                    <br />
+                    <input type="tel" asp-for="PhoneNumber" class="form-control" />
+                    <br />
+                    <input type="text" asp-for="ImageUrl" class="form-control" />
+                    <br />
+                    <button class="btn btn-warning">Personeli Kaydet</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
